# projeto-solar

./: .gitignore  README.md  main.py  pyproject.toml  unifilar.py
inputs/: input_solar.json
output/: output-files.txt
src/: config.py  formularioENEL.py  gerar_pdf.py  unifilar.py
src/textos/: textos.py
src/utils/: equacoes.py  helpers.py  imagens.py  models.py  schemas.py  tabelas.py
support-files/: support-files.txt
support-files/templates_diagramaunifilar/: diagramas.txt
support-files/templates_formularios/: templates.txt
utils/: equacoes.py
